# slam_learning

./: .gitignore  README.md
coding_slam1/chapter2/useEigen/: CMakeLists.txt  eigenMatrix.cpp
coding_slam1/chapter3/: CMakeLists.txt  useSophus.cpp
coding_slam1/chapter4/ceres_curve_fitting/: CMakeLists.txt  main.cpp
coding_slam1/chapter4/g2o/: CMakeLists.txt  main.cpp
coding_slam1/chapter4/imageBasic/: CMakeLists.txt  imageBasics.cpp
coding_slam1/chapter4/joinMap/: CMakeLists.txt  joinMap.cpp
coding_slam1/chapter5/feature_extraction/: CMakeLists.txt  feature_extraction.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp
coding_slam1/chapter5/feature_extraction/cmake_modules/: FindCSparse.cmake
coding_slam1/chapter6/LKFlow/: CMakeLists.txt  useLK.cpp
coding_slam1/chapter6/directMethod/: CMakeLists.txt  direct_semidense.cpp  direct_sparse.cpp
coding_slam1/chapter7/ceres_custombundle/: CMakeLists.txt  SnavelyReprojectionError.h  ceresBundle.cpp
coding_slam1/chapter7/ceres_custombundle/common/: BALProblem.cpp  BALProblem.h  BundleParams.h  projection.h
coding_slam2/chapter2/vio_data_sim/: CMakeLists.txt
coding_slam2/chapter2/vio_data_sim/main/: gener_alldata.cpp
coding_slam2/chapter2/vio_data_sim/python_tool/: GeometryLib.py  draw_points.py  draw_trajcory.py  transformations.py
coding_slam2/chapter2/vio_data_sim/src/: imu.cpp  imu.h  param.cpp  param.h  utilities.cpp  utilities.h
coding_slam2/chapter3/curveFitting/: CMakeLists.txt
coding_slam2/chapter3/curveFitting/app/: CMakeLists.txt  CurveFitting.cpp
(+15 files in other folders)
